--- a/Triple-Ten/Sprint__1/se_project_library/__Edit__.html
+++ b/Triple-Ten/Sprint__1/se_project_library/__Edit__.html
@@ -15,33 +15,32 @@
 
   <body>
     <div class="page">
-      <header>
-        <img
-        src="./images/logo.svg"
-        alt="Triple Peaks Library Logo"
-        class="nav__logo"
-      />
-        <nav>
-          
-          <ul class="nav__links">
-            <li><a class="nav__link" href="#">Events</a></li>
-            <li><a class="nav__link" href="#">Staff picks</a></li>
-            <li><a class="nav__link" href="#">Become a member</a></li>
-            <li><a class="nav__link" href="#">About</a></li>
-            <li><a class="nav__link" href="#">Contacts</a></li>
-          </ul>
-        </nav>
+      <header class="header">
+        <div class="header__content">
+          <img
+            src="./images/logo.svg"
+            alt="Triple Peaks Library Logo"
+            class="nav__logo"
+          />
+          <nav>
+            <ul class="nav__links">
+              <li><a class="nav__link" href="#">Events</a></li>
+              <li><a class="nav__link" href="#">Staff picks</a></li>
+              <li><a class="nav__link" href="#">Become a member</a></li>
+              <li><a class="nav__link" href="#">About</a></li>
+              <li><a class="nav__link" href="#">Contacts</a></li>
+            </ul>
+          </nav>
         <h1 class="header__title">Welcome to the Triple Peaks Library</h1>
+        </div>
         <p class="header__description">
           We're pleased to open our library doors to everyone! Come and expand
           your development knowledge, or just use this lovely spot to work or
           study. This is a cool place for cool students!
         </p>
 
-        <!-- ----------------------------------------------------------------- -->
-        <!--               Don't uncomment until project stage 2               -->
-        <!-- ----------------------------------------------------------------- -->
-        <img
+        <!-- Uncomment at project stage 2 -->
+        <!-- <img
           src="./images/inside_the_library.svg"
           alt="Illustration 'Inside the library'"
           class="header__image"
